--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,3 +27,9 @@ hc.kim:
   email: hc.kim@ridi.com
   gravatar: b2a4e78d73cfe3724dac0a947d04c3ac
   profile-text: "리디북스 서점 개발을 맡고 있습니다.<br>보다 쉽고 빠르고 편하게 책을 구매할 수 있는 서점을 만들고 있습니다."
+
+simple:
+  name: Jaemin Bae
+  email: simple@ridi.com
+  gravatar: a4fd3ccc716ab33301eca22b9bd98e14
+  profile-text: "리디북스의 디자이너들이 더 잘할 수 있도록, 더 만족하면서 일하도록 돕고 있습니다."
